# ICT-management

./: __init__.py  app.py  config.py  models.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: .flaskenv  .pylintrc  README.md
backend/migrations/versions/: 5142797675de_initial_migration.py
backend/src/: __init__.py  app.py  config.py
backend/src/models/: company.py  equipment.py  ticket.py  user.py
frontend/: .eslintignore  angular.json  eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/: index.html
frontend/src/app/components/auth/pages/log-in/: log-in.spec.ts  log-in.ts
migrations/versions/: 63413f8c97b1_add_softwares_table.py  aea7f500bd10_add_equipment_column.py
src/: app.py
src/common/forms/: auth.py
src/controllers/: auth.py
src/models/: __init__.py  company.py  equipment.py  software.py  user.py
src/static/: variables.css
