[tool.poetry]
package-mode = false

[project]
name = "ict-management"
version = "0.1.0"
description = ""
authors = [
    {name = "carlosOlcina",email = "carlosolcina23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-sqlalchemy (==3.1.1)",
    "sqlalchemy (==2.0.48)",
    "pymysql (>=1.1.2,<2.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "pylint-flask (>=0.6,<0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
